# materialshapes-python

./: .gitignore  README.md  image_gen.py  pyproject.toml  requirements.txt
examples/: image_gen.py  kivy.py  kivy_basic.py  loading_indicator.py
material_shapes/: cubic.py  feature_mapping.py  features.py  float_mapping.py  kivy_widget.py  material_shapes.py  morph.py  polygon_measure.py  rounded_polygon.py  utils.py
materialshapes/: kivy_widget.py  renderer.py  utils.py
shapes/: cubic.py  feature_mapping.py  features.py  float_mapping.py  kivy_widget.py  material_shapes.py  morph.py  polygon_measure.py  rounded_polygon.py  utils.py
