[project]
name = "materialshapes"
version = "0.3"
description = "Material shapes in pure python."
authors = [
  { name="Ansh Dadwal", email="anshdadwal298@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">3.8"
dependencies = [
  "kivy",
  "pillow",
]

[project.optional-dependencies]
thorvg = ["thorvg-python==1.1.1"]
cairo = ["pycairo"]
all = ["thorvg-python==1.1.1", "pycairo"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
